SERVER-27218 Fix WT Ext4/XFS startup warning in the shell

(cherry picked from commit 5bd4529cffd8149f5471df5e8013828c1dcc1e4e)